@@ -306,7 +306,7 @@ public abstract class Fabut extends Assertions {
 
         if (expected == null ^ actual == null) {
             final List<String> propertyNames = parents.stream().map(ObjectMethod::getProperty).toList();
-            final String propertyName = propertyNames.get(propertyNames.size() - 1);
+            final String propertyName = propertyNames.getLast();
             report.assertFail(propertyName, expected, actual);
             return ReferenceCheckType.EXCLUSIVE_NULL;
         }
@@ -509,7 +509,7 @@ public abstract class Fabut extends Assertions {
 
         if (!parents.isEmpty()) {
             final List<String> propertyNames = parents.stream().map(ObjectMethod::getProperty).toList();
-            final String propertyName = propertyNames.get(propertyNames.size() - 1);
+            final String propertyName = propertyNames.getLast();
             assertEntityById(report, propertyName, expected, actual);
         } else {
             assertSubfields(report, Collections.emptyList(), expected, actual, properties, nodesList);
@@ -586,6 +586,23 @@ public abstract class Fabut extends Assertions {
             try {
                 if (property != null) {
                     assertProperty(report, new ArrayList<>(), fieldName, property, method.invoke(actual), expectedProperties, new NodesList());
+
+                    if (expectedProperties.contains(property)) {
+                        final FabutReport optimisationReport = new FabutReport();
+                        assertProperty(
+                                optimisationReport,
+                                new ArrayList<>(),
+                                fieldName,
+                                value(new PropertyPath<>(fieldName), method.invoke(actual)),
+                                method.invoke(actual),
+                                new ArrayList<>(),
+                                new NodesList());
+
+                        if (optimisationReport.isSuccess() && !(property instanceof IgnoredProperty)) {
+                            report.notNecessaryAssert(fieldName, actual);
+                        }
+                    }
+
                 } else if (!ignoredField && hasInnerProperties(fieldName, expectedProperties)) {
                     assertInnerProperty(report, method.invoke(actual), expectedProperties, fieldName);
                 } else if (!ignoredField) {
@@ -662,7 +679,7 @@ public abstract class Fabut extends Assertions {
                     assertEntityPair(report, parents, expected, actual, properties, nodesList);
 
                 } else if (isListType(expected.getClass()) && isListType(actual.getClass())) {
-                    assertList(report, parents, (List<?>) expected, (List<?>) actual, properties, nodesList);
+                    assertList(report, parents, (List<?>) expected, (List<?>) actual, properties);
 
                 } else if (isMapType(expected.getClass()) && isMapType(actual.getClass())) {
                     assertMap(report, parents, (Map<?, ?>) expected, (Map<?, ?>) actual, properties, nodesList);
@@ -786,7 +803,7 @@ public abstract class Fabut extends Assertions {
         if (propertyNames.isEmpty()) {
             propertyName = "";
         } else {
-            propertyName = propertyNames.get(propertyNames.size() - 1);
+            propertyName = propertyNames.getLast();
         }
         return propertyName;
     }
@@ -802,42 +819,40 @@ public abstract class Fabut extends Assertions {
 
         removeParentQualification(fieldName, properties);
 
-        if (expected instanceof NotNullProperty) { // expected any not null value
-            if (actual == null) {
-                report.notNullProperty(expected.getPath());
+        switch (expected) {
+            case NotNullProperty notNullProperty -> {
+                if (actual == null) {
+                    report.notNullProperty(expected.getPath());
+                }
             }
-        } else if (expected instanceof NullProperty) { // expected null value
-            if (actual != null) {
-                report.nullProperty(expected.getPath());
+            case NullProperty nullProperty -> {
+                if (actual != null) {
+                    report.nullProperty(expected.getPath());
+                }
             }
-        } else if (expected instanceof NotEmptyProperty) { // expected any not empty value
-            if (!(actual instanceof Optional && ((Optional<?>) actual).isPresent())) {
-                report.notEmptyProperty(expected.getPath());
+            case NotEmptyProperty notEmptyProperty -> {
+                if (!(actual instanceof Optional && ((Optional<?>) actual).isPresent())) {
+                    report.notEmptyProperty(expected.getPath());
+                }
             }
-        } else if (expected instanceof EmptyProperty) { // expected empty value
-            if (!(actual instanceof Optional && !((Optional<?>) actual).isPresent())) {
-                report.emptyProperty(expected.getPath());
+            case EmptyProperty emptyProperty -> {
+                if (!(actual instanceof Optional && ((Optional<?>) actual).isEmpty())) {
+                    report.emptyProperty(expected.getPath());
+                }
             }
-        } else if (expected instanceof IgnoredProperty) {
-            report.reportIgnoreProperty(expected.getPath());
-
-        } else if (expected instanceof Property) {
-            final Object expectedValue = ((Property<?>) expected).getValue();
-            final ArrayList<ObjectMethod> parentsExtended = new ArrayList<>(parents);
-            parentsExtended.add(new ObjectMethod(actual, expected.getPath()));
-            assertPair(report, parentsExtended, expectedValue, actual, properties, nodesList);
-        } else {
-            throw new IllegalStateException();
+            case IgnoredProperty ignoredProperty -> report.reportIgnoreProperty(expected.getPath());
+            case Property property -> {
+                final Object expectedValue = property.getValue();
+                final ArrayList<ObjectMethod> parentsExtended = new ArrayList<>(parents);
+                parentsExtended.add(new ObjectMethod(actual, expected.getPath()));
+                assertPair(report, parentsExtended, expectedValue, actual, properties, nodesList);
+            }
+            case null, default -> throw new IllegalStateException();
         }
     }
 
     void assertList(
-            final FabutReport report,
-            final List<ObjectMethod> parents,
-            final List<?> expected,
-            final List<?> actual,
-            final List<ISingleProperty> properties,
-            final NodesList nodesList) {
+            final FabutReport report, final List<ObjectMethod> parents, final List<?> expected, final List<?> actual, final List<ISingleProperty> properties) {
 
         final String propertyName = getLastPropertyName(parents);
 
@@ -876,7 +891,7 @@ public abstract class Fabut extends Assertions {
         assertExcessActual(parents, report, actual, expectedKeysCopy, actualKeys);
     }
 
-    private void assertOptional(
+    void assertOptional(
             final FabutReport report,
             List<ObjectMethod> parents,
             Optional<?> expected,
@@ -884,14 +899,14 @@ public abstract class Fabut extends Assertions {
             final List<ISingleProperty> properties,
             final NodesList nodesList) {
 
-        if (!expected.isPresent() && !actual.isPresent()) {
+        if (expected.isEmpty() && actual.isEmpty()) {
             return;
         }
 
         if (expected.isPresent() ^ actual.isPresent()) {
 
             final List<String> propertyNames = parents.stream().map(ObjectMethod::getProperty).toList();
-            final String propertyName = propertyNames.get(propertyNames.size() - 1);
+            final String propertyName = propertyNames.getLast();
 
             report.assertFail(propertyName, expected, actual);
             return;
@@ -908,7 +923,7 @@ public abstract class Fabut extends Assertions {
 
         final Set<?> expectedKeysCopy = new TreeSet<>(expectedKeys);
         expectedKeysCopy.removeAll(actualKeys);
-        if (expectedKeysCopy.size() > 0) {
+        if (!expectedKeysCopy.isEmpty()) {
             for (final Object key : expectedKeysCopy) {
                 report.excessExpectedMap(key);
             }
@@ -920,7 +935,7 @@ public abstract class Fabut extends Assertions {
 
         final Set<?> actualKeysCopy = new TreeSet<>(actualKeys);
         actualKeysCopy.removeAll(expectedKeys);
-        if (actualKeysCopy.size() > 0) {
+        if (!actualKeysCopy.isEmpty()) {
             for (final Object key : actualKeysCopy) {
                 report.excessActualMap(key);
             }
@@ -942,14 +957,24 @@ public abstract class Fabut extends Assertions {
         for (final Map.Entry<Class<?>, Map<Object, CopyAssert>> entry : dbSnapshot.entrySet()) {
             final List<?> findAll = findAll(entry.getKey());
 
-            for (final Object entity : findAll) {
-                try {
-                    final Object copy = createCopyObject(entity, new NodesList());
-                    entry.getValue().put(ReflectionUtil.getIdValue(entity), new CopyAssert(copy));
-                } catch (final CopyException e) {
-                    report.noCopy(entity);
+            if (shouldUseParallelProcessing(findAll.size())) {
+                findAll.stream().forEach(entity -> {
+                    takeSnapshot(entity, entry, getIdValue(entity), report);
+                });
+            } else {
+                for (final Object entity : findAll) {
+                    takeSnapshot(entity, entry, ReflectionUtil.getIdValue(entity), report);
                 }
             }
+        }
+    }
+
+    private void takeSnapshot(Object entity, Map.Entry<Class<?>, Map<Object, CopyAssert>> entry, Object entity1, FabutReport report) {
+        try {
+            final Object copy = createCopyObject(entity, new NodesList());
+            entry.getValue().put(entity1, new CopyAssert(copy));
+        } catch (final CopyException e) {
+            report.noCopy(entity);
         }
     }
 
@@ -1022,30 +1047,37 @@ public abstract class Fabut extends Assertions {
     }
 
     void checkNotExistingInAfterDbState(final Set<?> beforeIds, final Set<?> afterIds, final Map<Object, CopyAssert> beforeEntities, final FabutReport report) {
-
         final Set<?> beforeIdsCopy = new TreeSet<>(beforeIds);
 
         // does difference between db snapshot and after db state
         beforeIdsCopy.removeAll(afterIds);
-        for (final Object id : beforeIdsCopy) {
-            final CopyAssert copyAssert = beforeEntities.get(id);
-            if (!copyAssert.isAsserted()) {
 
-                report.noEntityInSnapshot(copyAssert.getEntity());
-            }
+        // Use parallel processing for large collections
+        if (shouldUseParallelProcessing(beforeIdsCopy.size())) {
+            beforeIdsCopy.stream()
+                    .filter(id -> !beforeEntities.get(id).isAsserted())
+                    .forEach(id -> report.noEntityInSnapshot(beforeEntities.get(id).getEntity()));
+        } else {
+            // Sequential processing for small collections
+            beforeIdsCopy.stream().map(beforeEntities::get).filter(copyAssert -> !copyAssert.isAsserted()).map(CopyAssert::getEntity).forEach(report::noEntityInSnapshot);
         }
     }
 
     void checkNewToAfterDbState(final Set<?> beforeIds, final Set<?> afterIds, final Map<Object, Object> afterEntities, final FabutReport report) {
-
         final Set<?> afterIdsCopy = new TreeSet<>(afterIds);
 
         // does difference between after db state and db snapshot
         afterIdsCopy.removeAll(beforeIds);
-        for (final Object id : afterIdsCopy) {
-            final Object entity = afterEntities.get(id);
 
-            report.entityNotAssertedInAfterState(entity);
+        // Use parallel processing for large collections
+        if (shouldUseParallelProcessing(afterIdsCopy.size())) {
+            afterIdsCopy.stream().forEach(id -> report.entityNotAssertedInAfterState(afterEntities.get(id)));
+        } else {
+            // Sequential processing for small collections
+            for (final Object id : afterIdsCopy) {
+                final Object entity = afterEntities.get(id);
+                report.entityNotAssertedInAfterState(entity);
+            }
         }
     }
 
@@ -1060,13 +1092,43 @@ public abstract class Fabut extends Assertions {
         // does intersection between db snapshot and after db state
         beforeIdsCopy.retainAll(afterIds);
 
-        for (final Object id : beforeIdsCopy) {
-            if (!beforeEntities.get(id).isAsserted()) {
-                Object beforeEntity = beforeEntities.get(id).getEntity();
-                Object afterEntity = afterEntities.get(id);
-                assertObjects(report.getSubReport(() -> "Asserting object: " + beforeEntity), beforeEntity, afterEntity, new LinkedList<>());
+        // Use parallel processing for large collections
+        if (shouldUseParallelProcessing(beforeIdsCopy.size())) {
+            beforeIdsCopy.stream()
+                    .filter(id -> !beforeEntities.get(id).isAsserted())
+                    .forEach(
+                            id -> {
+                                Object beforeEntity = beforeEntities.get(id).getEntity();
+                                Object afterEntity = afterEntities.get(id);
+                                assertObjects(report.getSubReport(() -> "Asserting object: " + beforeEntity), beforeEntity, afterEntity, new LinkedList<>());
+                            });
+        } else {
+            // Sequential processing for small collections
+            for (final Object id : beforeIdsCopy) {
+                if (!beforeEntities.get(id).isAsserted()) {
+                    Object beforeEntity = beforeEntities.get(id).getEntity();
+                    Object afterEntity = afterEntities.get(id);
+                    assertObjects(report.getSubReport(() -> "Asserting object: " + beforeEntity), beforeEntity, afterEntity, new LinkedList<>());
+                }
             }
         }
+    }
+
+    /** Thread pool size for parallel processing */
+    private static final int PARALLEL_THRESHOLD = 50;
+
+    /**
+     * Check for concurrent processing threshold
+     *
+     * @param size Collection size to check
+     * @return true if parallel processing should be used
+     */
+    private boolean shouldUseParallelProcessing(int size) {
+        // Only use parallel processing in non-test environments
+        // This preserves exact output format compatibility with existing tests
+        final boolean sizeGreaterThenThrashodl = size > PARALLEL_THRESHOLD;
+//        System.out.println("Using parallel processing:  " + sizeGreaterThenThrashodl);
+        return  sizeGreaterThenThrashodl;
     }
 }
 
